Bug 159708 - Fix the magic numbers for ARM traditional in InlineAccess.h
Summary: Fix the magic numbers for ARM traditional in InlineAccess.h
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Csaba Osztrogonác
URL:
Keywords:
Depends on:
Blocks: 159408
  Show dependency treegraph
 
Reported: 2016-07-13 03:34 PDT by Csaba Osztrogonác
Modified: 2016-07-13 22:25 PDT (History)
5 users (show)

See Also:


Attachments
Patch (1.60 KB, patch)
2016-07-13 03:35 PDT, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2016-07-13 03:34:44 PDT
These numbers are incorrect, should be updated based on
https://bugs.webkit.org/show_bug.cgi?id=158719#c29
Comment 1 Csaba Osztrogonác 2016-07-13 03:35:56 PDT
Created attachment 283503 [details]
Patch
Comment 2 Saam Barati 2016-07-13 09:46:56 PDT
Comment on attachment 283503 [details]
Patch

r=me
Comment 3 WebKit Commit Bot 2016-07-13 22:25:31 PDT
Comment on attachment 283503 [details]
Patch

Clearing flags on attachment: 283503

Committed r203213: <http://trac.webkit.org/changeset/203213>
Comment 4 WebKit Commit Bot 2016-07-13 22:25:34 PDT
All reviewed patches have been landed.  Closing bug.