Fix the magic numbers for ARM traditional in InlineAccess.h https://bugs.webkit.org/show_bug.cgi?id=159708

Reviewed by Saam Barati.

* bytecode/InlineAccess.h:
(JSC::InlineAccess::sizeForPropertyAccess):
(JSC::InlineAccess::sizeForPropertyReplace):
(JSC::InlineAccess::sizeForLengthAccess):


Canonical link: https://commits.webkit.org/177903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203213 268f45cc-cd09-0410-ab3c-d52691b4dbfc